--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -14,3 +14,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.loading {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform-origin: 50%;
+  margin-left: -25px;
+  margin-top: -25px;
+  border: 4px solid $accent;
+  border-radius: 50%;
+  border-top-color: transparent;
+  box-sizing: border-box;
+  animation: loading-spin;
+}
+
+@keyframes loading-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
