--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,7 +8,7 @@
   align-items: stretch;
 
   gap: 5%;
-  
+
   div {
     display: flex;
     align-items: center;
@@ -32,4 +32,10 @@
     padding: 2%;
     font-size: 1.8rem;
   }
+
+  .github-logo {
+    margin-left: auto;
+    margin-right: 20px;
+  }
+
 }
