--- a/src/components/ListForm/ListForm.scss
+++ b/src/components/ListForm/ListForm.scss
@@ -1,3 +1,30 @@
 .ListForm {
-  display: inline-block;
+  display: flex;
+  padding: 30px;
+  justify-content: center;
+
+  form {
+    gap: 30px;
+    height: 100px;
+    text-align: center;
+  }
+
+  textarea {
+    padding: 5px 10px;
+    border-radius: 10px;
+    resize: none;
+    min-height: 70px;
+    border: none;
+    background-color: #eee;
+
+    &:focus {
+      border:none;
+    }
+  }
+
+  input {
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
