--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,13 +7,13 @@
   background: $accent;
   align-items: stretch;
 
-  gap: 5%;
+  gap: 25px;
 
   div {
     display: flex;
     align-items: center;
     transition: all 0.2s linear;
-    padding: 0px 1.5%;
+    padding: 0px 1vw;
 
     &:hover {
       background-color: $text;
@@ -25,6 +25,7 @@
     a {
       color: $text;
       text-decoration: none;
+      font-size: max(1.5vw, 20px);
     }
   }
 
